# multi-task

./: pyproject.toml
nn/: branch.py
training/farsight/: accelerate_config.yaml  ds_config.json  run_branch.py  train.slurm  utils.py
training/farsight/nn/: branch.py
training/sentiment/: run_branch.py  utils.py
