[project]
name = "multi-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ksterx", email = "kostonerx@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
